--- a/.github/workflows/master_webapprc100.yml
+++ b/.github/workflows/master_webapprc100.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -35,7 +35,7 @@ jobs:
           path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
@@ -52,9 +52,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0CAB3D1E5A6B46C4898F32D95C28361A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CF1CAA0EAE684BEDBB4ECD8B8ED122DD }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_84A83511E2F34BC7B269877161EA3AAC }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_837627E8A36F4CAEA44839C30AE10286 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0641CCE95C93461298A0F41EC484ED19 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8A9F9B2AD41E4D93B3B4F3AFBBB567F6 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
